// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerView PickerView disabled 1`] = `
<div>
  <div
    class="za-picker-view"
  >
    <div
      class="za-picker-view__content"
    >
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item za-wheel__item--selected za-wheel__item--disabled"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            选项一
          </div>
          <div
            class="za-wheel__item za-wheel__item--disabled"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            选项二
          </div>
        </div>
      </div>
    </div>
    <div
      class="za-picker-view__mask za-picker-view__mask--top"
    />
    <div
      class="za-picker-view__mask za-picker-view__mask--bottom"
    />
  </div>
</div>
`;

exports[`PickerView PickerView render visible 1`] = `
<div>
  <div
    class="za-picker-view"
  >
    <div
      class="za-picker-view__content"
    >
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            选项一
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            选项二
          </div>
        </div>
      </div>
    </div>
    <div
      class="za-picker-view__mask za-picker-view__mask--top"
    />
    <div
      class="za-picker-view__mask za-picker-view__mask--bottom"
    />
  </div>
</div>
`;
